--- a/index.html
+++ b/index.html
@@ -13,15 +13,50 @@
     <div id="mainvisual">
       <img src="img/mainvisual.jpg" alt="">
     </div>
+
     <div id="copy">
       <h1>Recipe Diary</h1>
       <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
     </div>
+
     <ul id="contents">
       <li class="content"><img src="img/recipe1.jpg"></li>
       <li class="content"><img src="img/recipe2.jpg"></li>
       <li class="content"><img src="img/recipe3.jpg"></li>
     </ul>
+
+    <div class="flex">
+      <div class="item">
+        <img src="img/recipe.jpg" alt="レシピ">
+      </div>
+
+      <div class="item text">
+        <h1>ひよこ豆とアボガドのタコス</h1>
+        <p>たっぷりのひよこ豆とレンズ豆にアボガドとトマトを添えて、少しライムを絞ったらおいしいタコスのできあがりです。</p>
+        <h2>材料(２人分)</h2>
+        <dl class="ingredient-list">
+          <dt>テキストテキスト</dt>
+          <dd>１個</dd>
+          <dt>テキストテキスト</dt>
+          <dd>１個</dd>
+          <dt>テキストテキスト</dt>
+          <dd>１個</dd>
+          <dt>テキストテキスト</dt>
+          <dd>１個</dd>
+          <dt>テキストテキスト</dt>
+          <dd>１個</dd>
+        </dl>
+        <h2>作り方</h2>
+        <ol class="step-list">
+          <li>テキストテキストテキストテキストテキストテキスト</li>
+          <li>テキストテキストテキストテキストテキストテキスト</li>
+          <li>テキストテキストテキストテキストテキストテキスト</li>
+          <li>テキストテキストテキストテキストテキストテキスト</li>
+          <li>テキストテキストテキストテキストテキストテキスト</li>
+        </ol>
+      </div>
+    </div>
+
     <div id="link">
       <a href="#">レシピ一覧を見る</a>
     </div>
